--- a/style.css
+++ b/style.css
@@ -9,7 +9,11 @@ body {
   background-color: #48d1cc;
   color: #333;
 }
+/*============================================================
 
+Custom-Select
+
+============================================================*/
 .custom-select-wrapper {
   position: relative;
   width: 250px;
@@ -73,7 +77,11 @@ body {
 .custom-options.open {
   max-height: 200px; /* 開いた時の最大高さ（コンテンツに合わせて調整） */
 }
+/*============================================================
 
+Option
+
+============================================================*/
 .option {
   padding: 12px 15px;
   font-size: 1.1em;
